--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article>
     </main>
 <footer>
-    Gjett et tall er lagd av <i>Incognito</i>
+    Gjett et tall er lagd av <i>Mats Solhjell Johansen</i>
 </footer>
     <script>
 
@@ -28,14 +28,22 @@
         var inpGjetting = document.getElementById("inpGjetting");
         var txtBeskjed = document.getElementById("txtBeskjed");
 
-        var korrektTall = 3;
+        var korrektTall = Math.floor((Math.random()* 20 + 1));
 
         // Lytter funksjon som kalles når noen har gjort en gjetning.
         function gjett(){
 
             // Henter ut tallet brukeren har gjettet og gjør om det til et tall
             var gjettetTall = Number(inpGjetting.value);
-
+            var svar;
+            if (gjettetTall == korrektTall) {
+              svar = "Du gjettet riktig!!";
+            } else if (gjettetTall < korrektTall) {
+              svar = "Dette ble for lavt";
+            } else {
+              svar = "Dette ble for høyt";
+            }
+            document.getElementById("txtBeskjed").innerHTML = svar;
             /* Fortsett her for å finne ut om tallet er korrekt! */
         }
 
